2009-06-16  Stephen Norris <srnorrisunc@gmail.com>
	* relaxation_time.m: removed offset such that minimum of dependent variable is zero.

2009-04-29  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: initial guesses are now smarter.
	* relaxtime_fun.m: same.
	
2009-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	* added dmbr folder
	* sucrose_viscosity.m: added solution density as an output.
	
2008-11-20  Kris Ford <krisford@email.unc.edu>
	* get_video_viscs.m: modified documentation to better match Mathworks convention
	* get_viscs.m: same
	* get_viscs_txyz.m: same
	* get_vrpn_viscs.m: same
	* jeffrey_model_step.m: same
	* calcD.m: same
	* diffusion_coefficient.m: same
	* get_file_viscs.m: same
	* get_moduli.m: same
	* percent_recovery.m: same
	* relaxation_time.m: same
	* relaxtime_fun.m: same
	* sucrose_viscosity.m: same
	* visc_ps.m: same
	
2007-05-17  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m: fixed bug (reference to a renamed variable ).

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* added (rheological) 'models' folder.
	* jeffrey_step_fit.m: removed.  moved to models folder.
	* jeffrey_step_fun.m: same.

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* updating changelog for last commit (forgot to save before commit)

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m:  cosmetic changes to code.
	* jeffery_step_fit.m:  added a switch for reporting fit results or not.

2006-11-06  Jeremy Cribb <jcribb@email.unc.edu>
	* jeffrey_step_fit.m:  fixed bug where jeffrey_step_fit called old fitting function file.

2006-10-26  Jeremy Cribb <jcribb@email.unc.edu>
	* Added kkr folder.
  * app.m: moved to kkr folder.
	* kkint.m: same.
	* kkr.m: same.
	* samplekkr.m: same.
	* evaluateKK.m: same.
	* jeffrey_model_step: Added.  Constructs a step response for jeffrey model, given parameters.
	* jeffrey_step_fun: Added.  Fits data to jeffrey rheological model.
	* jeffrey_step_fit: Added.  Fitting function for jeffrey_step_fun.m.